CMS/style/modal.css
/* The Modal (background) */
.modal {
    display: none;
    justify-content: center;
    align-items: center;
    position: fixed;
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.7);
}

/* Add Animation */
@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

/* Modal Content/Box */
.modal-content {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgb(30, 30, 30);
    color: #ddd;
    margin: auto;
    padding: 20px;
    border-radius: 8px;
    width: 50%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    animation-name: fadeIn;
    animation-duration: 0.4s;
}


/* Add Animation */
@keyframes animatetop {
    from {top: -300px; opacity: 0}
    to {top: 50%; opacity: 1}
}

.modal-header {
    padding: 8px 16px;
    border-bottom: 1px solid #555;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.modal-header h2 {
    margin: 0;
}

.modal-body {
    padding: 20px 30px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.input-group {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%; /* Makes sure the input group takes the full width of its container */
    margin-bottom: 10px;
}

.input-group label {
    flex-basis: 30%; /* Adjust this value to make room for the longest label */
    text-align: left;
    margin-right: 10px; /* Adds some space between the label and the input */
}

.input-group input,
.input-group select {
    flex-basis: 70%;
    padding: 0 8px;
    border: 1px solid #ddd;
    border-radius: 4px;
    background: none;
    color: #ddd;
}
select {
    height: 30px;
}
option {
    background-color: #333;
    margin-inline-end: 5px;
}

.modal-footer {
    padding: 8px 16px;
    border-top: 1px solid #e5e5e5;
    color: white;

    display: flex;
    justify-content: flex-end;
    align-items: center;
}

label {
    display: block;
    margin-bottom: 5px;
}

input[type="text"], input[type="date"], select {
    width: 100%;
    padding: 8px;
    margin-top: 4px;
    border: 1px solid #ddd;
    border-radius: 4px;
    background: none;
    color: #ddd;
}

button {
    padding: 10px;
    border: none;
    cursor: pointer;
}

#cancelStudentBt #confirmStudentBt {
    width: 30px;
    height: 30px;
    background: none;
    color: white;
}

::-webkit-calendar-picker-indicator {
    filter: invert(80%);
}

::-webkit-calendar-picker-indicator:hover {
    filter: invert(60%);
}


@media screen and (max-width: 800px) {
    #cancelStudentBt #confirmStudentBt {
        width: 60px;
        height: 60px;
        background: none;
        color: white;
    }
}

